--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
 
     <footer>
-        <p>Marcos Lopes &copy; 2022.</p>
+        <p> &copy;Marcos Lopes 2022.</p>
     </footer>
 </body>
 </html>
